[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clima-nutri"
version = "2025.12.21233357"
description = "clima-nutri analyzes text on CO2's impact on food quality, summarizing nutritional and caloric changes for policy and research."
readme = "README.md"
authors = [{ name = "clima-nutri", email = "hi@eugene.plus" }]
requires-python = ">=3.9"
dependencies = [
  "langchain-llm7>=0.0.0",
  "llmatch-messages>=0.0.0",
  "langchain-core>=0.3.0",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/chigwell/clima-nutri"
